Enhance Actuator and Firebase handling: Add servo control to ActuatorController, update FirebaseHandler with readiness check, and implement local data saving and historical data sending in main loop.

--- a/IFungi-Firmware/platformio.ini
+++ b/IFungi-Firmware/platformio.ini
@@ -25,3 +25,4 @@ lib_deps =
 	arduino-libraries/NTPClient@^3.2.1
 	robtillaart/ANSI@^0.3.4
 	tzapu/WiFiManager@^2.0.17
+	madhephaestus/ESP32Servo@^3.0.9
