Enhance Firebase control and structure validation: Add methods for blocking Firebase writes, improve actuator state updates, and implement checks for greenhouse structure completeness. Introduce calibration features and debug mode handling in the main controller.

--- a/IFungi-Firmware/platformio.ini
+++ b/IFungi-Firmware/platformio.ini
@@ -28,6 +28,6 @@ lib_deps =
 	madhephaestus/ESP32Servo@^3.0.9
 board_build.partitions = min_spiffs.csv
 build_flags = 
-    -Wno-unused-variable
-    -Wno-unused-function
-src_filter = +<MainController.cpp> +<*.cpp> +<*.h>
+	-Wno-unused-variable
+	-Wno-unused-function
+build_src_filter = +<MainController.cpp> +<*.cpp> +<*.h>
